Done some editings in backend

--- a/helm/backend/Chart.yaml
+++ b/helm/backend/Chart.yaml
@@ -1,46 +1,7 @@
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: {{ include "sentinelstack-frontend.fullname" . }}
-  namespace: sentinelstack
-  labels:
-    {{- include "sentinelstack-frontend.labels" . | nindent 4 }}
-spec:
-  {{- if not .Values.autoscaling.enabled }}
-  replicas: {{ .Values.replicaCount }}
-  {{- end }}
-  selector:
-    matchLabels:
-      app: frontend
-      {{- include "sentinelstack-frontend.selectorLabels" . | nindent 6 }}
-  template:
-    metadata:
-      annotations:
-        prometheus.io/scrape: "true"
-        prometheus.io/port: "80"
-        prometheus.io/path: "/metrics"
-      labels:
-        app: frontend
-        {{- include "sentinelstack-frontend.selectorLabels" . | nindent 8 }}
-    spec:
-      securityContext:
-        {{- toYaml .Values.podSecurityContext | nindent 8 }}
-      containers:
-      - name: frontend
-        image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
-        imagePullPolicy: {{ .Values.image.pullPolicy }}
-        ports:
-        - name: http
-          containerPort: 80
-          protocol: TCP
-        livenessProbe:
-          {{- toYaml .Values.livenessProbe | nindent 10 }}
-        readinessProbe:
-          {{- toYaml .Values.readinessProbe | nindent 10 }}
-        resources:
-          {{- toYaml .Values.resources | nindent 10 }}
-        securityContext:
-          {{- toYaml .Values.securityContext | nindent 10 }}
-        envFrom:
-        - configMapRef:
-            name: frontend-config
+apiVersion: v2
+name: sentinelstack-backend
+description: SentinelStack Backend Service
+type: application
+version: 0.1.0
+appVersion: "1.0.0"
+
