--- a/kubernetes/configmaps/backend-config.yaml
+++ b/kubernetes/configmaps/backend-config.yaml
@@ -4,9 +4,19 @@ metadata:
   name: backend-config
   namespace: sentinelstack
 data:
+  # Database
   DATABASE_HOST: "postgresql-service"
   DATABASE_PORT: "5432"
   DATABASE_NAME: "sentinelstack"
+
+  # Redis
   REDIS_HOST: "redis-service"
   REDIS_PORT: "6379"
+
+  # Logging
   LOG_LEVEL: "INFO"
+
+  # JWT CONFIG (THIS IS WHAT YOU WERE ASKING)
+  JWT_ISSUER: "sentinelstack"
+  JWT_AUDIENCE: "sentinelstack-users"
+  ACCESS_TOKEN_EXPIRE_MINUTES: "30"
