--- a/kubernetes/database/postgresql-deployment.yaml
+++ b/kubernetes/database/postgresql-deployment.yaml
@@ -27,7 +27,7 @@ metadata:
   namespace: sentinelstack
 type: Opaque
 stringData:
-  POSTGRES_PASSWORD: "ChangeThisPassword123!"
+  POSTGRES_PASSWORD: "Password123!"
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -55,6 +55,9 @@ spec:
             name: postgresql-config
         - secretRef:
             name: postgresql-secret
+        env:
+          - name: PGDATA
+            value: /var/lib/postgresql/data/pgdata
         volumeMounts:
         - name: postgresql-storage
           mountPath: /var/lib/postgresql/data
