--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,25 +2,13 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc && \
-    rm -rf /var/lib/apt/lists/*
-
 COPY requirements.txt .
-
 RUN pip install --no-cache-dir -r requirements.txt
 
-COPY ./app ./app
+COPY app ./app
 
-RUN useradd -m -u 1000 appuser && \
-    chown -R appuser:appuser /app
-
+RUN useradd -m -u 1000 appuser && chown -R appuser:appuser /app
 USER appuser
-
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD python -c "import requests; requests.get('http://localhost:8000/health')"
-
-EXPOSE 8000
 
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "8000"]
 
