--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -137,6 +137,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: '0'
         continue-on-error: true
+        continue-on-error: true
 
       - name: Upload Trivy results
         uses: github/codeql-action/upload-sarif@v2
