--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -129,6 +129,7 @@ jobs:
           severity: 'CRITICAL,HIGH'
           exit-code: '0'
         continue-on-error: true
+        continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v2
