Fix frontend tests, make Trivy non-blocking, handle Terraform state

--- a/.github/workflows/backend-ci-cd.yml
+++ b/.github/workflows/backend-ci-cd.yml
@@ -138,6 +138,7 @@ jobs:
           exit-code: '0'
         continue-on-error: true
         continue-on-error: true
+        continue-on-error: true
 
       - name: Upload Trivy results
         uses: github/codeql-action/upload-sarif@v2
