--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -130,6 +130,7 @@ jobs:
           exit-code: '0'
         continue-on-error: true
         continue-on-error: true
+        continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v2
