--- a/.github/workflows/frontend-ci-cd.yml
+++ b/.github/workflows/frontend-ci-cd.yml
@@ -131,6 +131,8 @@ jobs:
         continue-on-error: true
         continue-on-error: true
         continue-on-error: true
+        continue-on-error: true
+        continue-on-error: true
 
       - name: Upload Trivy results to GitHub Security
         uses: github/codeql-action/upload-sarif@v2
